include/Urban.h

// Opaque handle type (pointer to private struct)
typedef struct _p_UrbanType *UrbanType;
// Error codes for API calls
typedef enum {
  URBAN_SUCCESS = 0,
  URBAN_ERR_INVALID_ARGUMENT = 1,
  URBAN_ERR_NOT_INITIALIZED = 2,
  URBAN_ERR_INTERNAL = 3,
  URBAN_ERR_SIZE_MISMATCH = 4
} UrbanErrorCode;
URBAN_EXTERN void UrbanSetBuildingMinTemperature(UrbanType urban,
                                                 const double *values,
                                                 int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetBuildingTemperature(UrbanType urban,
                                              const double *values, int length,
                                              UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetBuildingWallThickness(UrbanType urban,
                                                const double *values,
                                                int length,
                                                UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetBuildingRoofThickness(UrbanType urban,
                                                const double *values,
                                                int length,
                                                UrbanErrorCode *status);
// Setup and initialization functions
URBAN_EXTERN void UrbanSetup(UrbanType urban, UrbanErrorCode *status);
// Time-stepping functions
URBAN_EXTERN void UrbanAdvance(UrbanType urban, UrbanErrorCode *status);
// Physics computation functions
URBAN_EXTERN void UrbanComputeNetLongwave(UrbanType urban,
                                          UrbanErrorCode *status);
URBAN_EXTERN void UrbanComputeNetShortwave(UrbanType urban,
                                           UrbanErrorCode *status);
URBAN_EXTERN void UrbanComputeSurfaceFluxes(UrbanType urban,
                                            UrbanErrorCode *status);
URBAN_EXTERN void UrbanComputeHydrology(UrbanType urban, double dtime,
                                        UrbanErrorCode *status);
URBAN_EXTERN void UrbanComputeHeatDiffusion(UrbanType urban,
                                            UrbanErrorCode *status);
URBAN_EXTERN void UrbanComputeNetShortwaveRadiation(UrbanType urban,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanComputeSoilFluxes(UrbanType urban,
                                         UrbanErrorCode *status);
// Layer temperature setter functions
URBAN_EXTERN void UrbanSetLayerTempRoof(UrbanType urban, const double *values,
                                        const int size[2],
                                        UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetLayerTempImperviousRoad(UrbanType urban,
                                                  const double *values,
                                                  const int size[2],
                                                  UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetLayerTempPerviousRoad(UrbanType urban,
                                                const double *values,
                                                const int size[2],
                                                UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetLayerTempSunlitWall(UrbanType urban,
                                              const double *values,
                                              const int size[2],
                                              UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetLayerTempShadedWall(UrbanType urban,
                                              const double *values,
                                              const int size[2],
                                              UrbanErrorCode *status);
// Canyon air property setter functions
URBAN_EXTERN void UrbanSetCanyonAirTemperature(UrbanType urban,
                                               const double *values, int length,
                                               UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetCanyonSpecificHumidity(UrbanType urban,
                                                 const double *values,
                                                 int length,
                                                 UrbanErrorCode *status);
// Top-layer soil water setter functions (for soil flux partitioning)
URBAN_EXTERN void UrbanSetTopH2OSoiLiqRoof(UrbanType urban,
                                           const double *values, int length,
                                           UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetTopH2OSoiIceRoof(UrbanType urban,
                                           const double *values, int length,
                                           UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetTopH2OSoiLiqImperviousRoad(UrbanType urban,
                                                     const double *values,
                                                     int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanSetTopH2OSoiIceImperviousRoad(UrbanType urban,
                                                     const double *values,
                                                     int length,
                                                     UrbanErrorCode *status);
// Soil ground heat flux (EflxSoilGrnd) getter functions — all five surfaces
URBAN_EXTERN void UrbanGetEflxSoilGrndRoof(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetEflxSoilGrndImperviousRoad(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetEflxSoilGrndPerviousRoad(UrbanType urban,
                                                   double *values, int length,
                                                   UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetEflxSoilGrndSunlitWall(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetEflxSoilGrndShadedWall(UrbanType urban,
                                                 double *values, int length,
                                                 UrbanErrorCode *status);
// Liquid ground evaporation (QflxEvapGrnd) getter functions
URBAN_EXTERN void UrbanGetQflxEvapGrndRoof(UrbanType urban, double *values,
                                           int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxEvapGrndImperviousRoad(UrbanType urban,
                                                     double *values, int length,
                                                     UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxEvapGrndPerviousRoad(UrbanType urban,
                                                   double *values, int length,
                                                   UrbanErrorCode *status);
// Ice sublimation (QflxSubSnow) getter functions
URBAN_EXTERN void UrbanGetQflxSubSnowRoof(UrbanType urban, double *values,
                                          int length, UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxSubSnowImperviousRoad(UrbanType urban,
                                                    double *values, int length,
                                                    UrbanErrorCode *status);
URBAN_EXTERN void UrbanGetQflxSubSnowPerviousRoad(UrbanType urban,
                                                  double *values, int length,
                                                  UrbanErrorCode *status);