include/urban_mod.F90


    subroutine UrbanSetBuildingMinTemperature(urban, values, length, status) bind(C, name="UrbanSetBuildingMinTemperature")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetBuildingMinTemperature

    subroutine UrbanSetBuildingTemperature(urban, values, length, status) bind(C, name="UrbanSetBuildingTemperature")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetBuildingTemperature

    subroutine UrbanSetBuildingWallThickness(urban, values, length, status) bind(C, name="UrbanSetBuildingWallThickness")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetBuildingWallThickness

    subroutine UrbanSetBuildingRoofThickness(urban, values, length, status) &
      bind(C, name="UrbanSetBuildingRoofThickness")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetBuildingRoofThickness

    ! Layer temperature setter functions (2D)
    subroutine UrbanSetLayerTempRoof(urban, values, size, status) &
      bind(C, name="UrbanSetLayerTempRoof")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetLayerTempRoof

    subroutine UrbanSetLayerTempImperviousRoad(urban, values, size, status) &
      bind(C, name="UrbanSetLayerTempImperviousRoad")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetLayerTempImperviousRoad

    subroutine UrbanSetLayerTempPerviousRoad(urban, values, size, status) &
      bind(C, name="UrbanSetLayerTempPerviousRoad")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetLayerTempPerviousRoad

    subroutine UrbanSetLayerTempSunlitWall(urban, values, size, status) &
      bind(C, name="UrbanSetLayerTempSunlitWall")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetLayerTempSunlitWall

    subroutine UrbanSetLayerTempShadedWall(urban, values, size, status) &
      bind(C, name="UrbanSetLayerTempShadedWall")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), dimension(2) :: size
      integer(c_int) :: status
    end subroutine UrbanSetLayerTempShadedWall

    ! Canyon air property setter functions (1D)
    subroutine UrbanSetCanyonAirTemperature(urban, values, length, status) &
      bind(C, name="UrbanSetCanyonAirTemperature")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetCanyonAirTemperature

    subroutine UrbanSetCanyonSpecificHumidity(urban, values, length, status) &
      bind(C, name="UrbanSetCanyonSpecificHumidity")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetCanyonSpecificHumidity

    ! Top-layer soil water setter functions (for soil flux partitioning)
    subroutine UrbanSetTopH2OSoiLiqRoof(urban, values, length, &
      status) bind(C, name="UrbanSetTopH2OSoiLiqRoof")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetTopH2OSoiLiqRoof

    subroutine UrbanSetTopH2OSoiIceRoof(urban, values, length, &
      status) bind(C, name="UrbanSetTopH2OSoiIceRoof")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetTopH2OSoiIceRoof

    subroutine UrbanSetTopH2OSoiLiqImperviousRoad(urban, values, length, &
      status) bind(C, name="UrbanSetTopH2OSoiLiqImperviousRoad")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetTopH2OSoiLiqImperviousRoad

    subroutine UrbanSetTopH2OSoiIceImperviousRoad(urban, values, length, &
      status) bind(C, name="UrbanSetTopH2OSoiIceImperviousRoad")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanSetTopH2OSoiIceImperviousRoad

    ! Setup and initialization functions
    subroutine UrbanSetup(urban, status) bind(C, name="UrbanSetup")
      import :: c_ptr, c_int, UrbanType
      type(UrbanType), value :: urban
      integer(c_int) :: status
    end subroutine UrbanSetup

    ! Time-stepping functions
    subroutine UrbanAdvance_C(urban, status) bind(C, name="UrbanAdvance")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanAdvance_C

    ! Physics computation functions
    subroutine UrbanComputeNetLongwave_C(urban, status) bind(C, name="UrbanComputeNetLongwave")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeNetLongwave_C

    subroutine UrbanComputeNetShortwave_C(urban, status) bind(C, name="UrbanComputeNetShortwave")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeNetShortwave_C

    subroutine UrbanComputeSurfaceFluxes_C(urban, status) bind(C, name="UrbanComputeSurfaceFluxes")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeSurfaceFluxes_C

    subroutine UrbanComputeHydrology_C(urban, dtime, status) bind(C, name="UrbanComputeHydrology")
      import :: c_ptr, c_int, c_double
      type(c_ptr), value :: urban
      real(c_double), value :: dtime
      integer(c_int) :: status
    end subroutine UrbanComputeHydrology_C

    subroutine UrbanComputeHeatDiffusion_C(urban, status) bind(C, name="UrbanComputeHeatDiffusion")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeHeatDiffusion_C

    subroutine UrbanComputeNetShortwaveRadiation_C(urban, status) bind(C, name="UrbanComputeNetShortwaveRadiation")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeNetShortwaveRadiation_C

    subroutine UrbanComputeSoilFluxes_C(urban, status) bind(C, name="UrbanComputeSoilFluxes")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      integer(c_int) :: status
    end subroutine UrbanComputeSoilFluxes_C

    ! Soil ground heat flux (EflxSoilGrnd) getter C interfaces
    subroutine UrbanGetEflxSoilGrndRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetEflxSoilGrndRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEflxSoilGrndRoof_C

    subroutine UrbanGetEflxSoilGrndImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetEflxSoilGrndImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEflxSoilGrndImperviousRoad_C

    subroutine UrbanGetEflxSoilGrndPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetEflxSoilGrndPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEflxSoilGrndPerviousRoad_C

    subroutine UrbanGetEflxSoilGrndSunlitWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetEflxSoilGrndSunlitWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEflxSoilGrndSunlitWall_C

    subroutine UrbanGetEflxSoilGrndShadedWall_C(urban, values, length, status) &
      bind(C, name="UrbanGetEflxSoilGrndShadedWall")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetEflxSoilGrndShadedWall_C

    ! QflxEvapGrnd getter C interfaces
    subroutine UrbanGetQflxEvapGrndRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxEvapGrndRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxEvapGrndRoof_C

    subroutine UrbanGetQflxEvapGrndImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxEvapGrndImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxEvapGrndImperviousRoad_C

    subroutine UrbanGetQflxEvapGrndPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxEvapGrndPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxEvapGrndPerviousRoad_C

    ! QflxSubSnow getter C interfaces
    subroutine UrbanGetQflxSubSnowRoof_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSubSnowRoof")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSubSnowRoof_C

    subroutine UrbanGetQflxSubSnowImperviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSubSnowImperviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSubSnowImperviousRoad_C

    subroutine UrbanGetQflxSubSnowPerviousRoad_C(urban, values, length, status) &
      bind(C, name="UrbanGetQflxSubSnowPerviousRoad")
      import :: c_ptr, c_int
      type(c_ptr), value :: urban
      type(c_ptr), value :: values
      integer(c_int), value :: length
      integer(c_int) :: status
    end subroutine UrbanGetQflxSubSnowPerviousRoad_C
